[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
itertools = "0.12.0"
base64 = "0.21.3"
sha256 = "1.3.0"
tokio = { version = "1.28" }
uint = "0.9.5"
ed25519-dalek = {  version = "2.1.0", features = ["rand_core"] }

near-workspaces = "0.9.0"

model = { path = "model" }

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "8dd8b63cef5e60448629a8903ea43b642bbf9f45" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "19a94420eeb9404f906890fc3e6d06111a841e39" }

sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "5e4566ba7e2a46bbd4a979574c4ccd9c6f4fc9db" }
sweat-integration = { git = "https://github.com/sweatco/sweat-near", rev = "5e4566ba7e2a46bbd4a979574c4ccd9c6f4fc9db" }

multisig-model = { git = "https://github.com/sweatco/multisig", rev = "3fbf55f4f4e3be26fddd21b825a07c6632a9f24f" }
multisig-integration = { git = "https://github.com/sweatco/multisig", rev = "3fbf55f4f4e3be26fddd21b825a07c6632a9f24f" }
