[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
itertools = "0.12.0"
base64 = "0.21.3"
sha256 = "1.3.0"
tokio = { version = "1.28" }
uint = "0.9.5"
ed25519-dalek = {  version = "2.1.0", features = ["rand_core"] }

near-workspaces = "0.9.0"

model = { path = "model" }

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

integration-trait = { git = "https://github.com/sweatco/integration-utils.git", rev = "9a455faf70702e285eea39ae69a73a4d123b523f" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "9a455faf70702e285eea39ae69a73a4d123b523f" }
helper-contract = { git = "https://github.com/sweatco/integration-utils.git", rev = "9a455faf70702e285eea39ae69a73a4d123b523f" }

sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "0ac66c4bd2f776130a0c98bc559d628c8bdf3fc9" }
sweat-integration = { git = "https://github.com/sweatco/sweat-near", rev = "0ac66c4bd2f776130a0c98bc559d628c8bdf3fc9" }

multisig-model = { git = "https://github.com/sweatco/multisig", rev = "15f1ef7a6278a4d6ec8f1ac3c4b2ec8a07753b5c" }
multisig-integration = { git = "https://github.com/sweatco/multisig", rev = "15f1ef7a6278a4d6ec8f1ac3c4b2ec8a07753b5c" }

near-self-update = { git = "https://github.com/sweatco/near-self-update.git", rev = "7064db3cdd924efc7fa7c00664920a2b482e7bcf" }
